2006-10-21  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/preferences-page-networks.c:
	  - Use weak references to the editor dialogs to repopulate the list
	    on the networks prefs page.  The way it was written before worked
	    fine when this editor was modal, but was broken now. (#363655)

2006-10-21  David Trowbridge  <trowbrds@gmail.com>

	* data/xchat-gnome.glade:
	  - Disable the "Users" button by default, since it will be enabled
	    when the first channel is joined, and it doesn't make sense when
	    not connected to anything. (#363651)

2006-10-21  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/irc-network-editor.c:
	* data/irc-network-editor.glade:
	  - Use "Close" and "Revert" buttons in network editor dialog
	    instead of "OK" and "Cancel" (#363658)

2006-10-21  David Trowbridge  <trowbrds@gmail.com>

	* data/xchat-gnome.glade:
	  - Change initial window title to include the words "IRC Client"
	    (#363649).

2006-10-18  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/xtext.c:
	* src/fe-gnome/xtext.h:
	A src/fe-gnome/image-utils.c:
	A src/fe-gnome/image-utils.h:
	* src/fe-gnome/fe-gnome.c:
	* src/fe-gnome/gui.c:
	* src/fe-gnome/about.c:
	* src/fe-gnome/Makefile.am:
	* configure.ac:
	  - Merge 10916:10923 from xtext-rework branch.

2006-10-16  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/conversation-panel.c:
	* src/fe-gnome/xtext.c:
	* src/fe-gnome/xtext.h:
	  - Merge 10907:10916 from xtext-rework branch.

2006-10-16  David Trowbridge  <trowbrds@gmail.com>

	* configure.ac:
	  - Bump to 0.15svn

==================== 0.14 ====================

2006-10-15  David Trowbridge  <trowbrds@gmail.com>

	* m4/gnome-doc-utils.m4:
	  - gnome-doc-utils really wants to update this.

	* configure.ac:
	* NEWS:
	  - Bump to 0.14

2006-10-15  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/xtext.c:
	  - Fix a small regression in hilight rendering. (#362477)

2006-10-15  David Trowbridge  <trowbrds@gmail.com>
